# dorfromantische2-rs

./: .gitignore  CLAUDE.md  Cargo.toml  QMLvsEGUI.md  README.md  biggame.sav  build.rs  mini.sav
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: pipeline_benchmarks.rs
bepinex_plugin/: CamExport.cs  CamExport.csproj  CamExportPatch.cs  CamExportPatch.csproj  Patcher.cs  Patcher.csproj  Patcher_working_bidirectional.cs.bak  Patcher_working_export.cs.bak  README.md
examples/: calibrate_camera.rs  colorscheme.rs  dump_group.rs  find_lakes.rs  find_pure_size6.rs  find_quest_group.rs  find_simple_groups.rs  inspect_tile.rs  quest_predict.rs  quest_validate.rs  quests.rs  scan_camera.rs  viewport_detect.rs  viewport_detect.rs.bak
hooks/: install.sh  pre-commit
src/: app.rs  best_placements.rs  bind_groups.rs  camera.rs  coords.rs  data.rs  file_watcher.rs  game_camera.rs.bak  game_data.rs  gpu.rs  gpu_data.rs  group.rs  group_assignments.rs  hex.rs  index.rs  input_state.rs  lerp.rs  lib.rs  lol.rs  main.rs  map.rs  opencv.rs  pipeline.rs  raw_data.rs  render_ui.rs  shader.frag  shader.rs  textures.rs  tile_frequency.rs  ui_state.rs  xlib.rs
src/data/: edge_profile.rs  form.rs  group_kind.rs  mod.rs  segment.rs  side.rs  terrain.rs  tile_table.rs
src/game/: game_camera.rs  game_nav.rs  mod.rs  screenshot.rs  viewport_detect.rs
src/render/: bind_groups.rs  camera.rs  gpu.rs  mod.rs  pipeline.rs  shader.frag  shader.rs  shader.vert  textures.rs
src/ui/: egui_integration.rs  input_state.rs  mod.rs  render_ui.rs  ui_state.rs
tests/: loading_and_analysis.rs
