[package]
name = "dorfromantische2-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dorfromantische2_rs"
path = "src/lib.rs"

[[bin]]
name = "dorfromantische2-rs"
path = "src/main.rs"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs.git", version = "1.0", tag = "1.0.79" }

[dependencies]
egui = "0.23.0"
egui-wgpu = "0.23.0"
egui-winit = "0.23.0"
env_logger = "0.10.0"
log = "0.4"
pollster = "0.3.0"
raw-window-handle = "0.5.0"
winit = "0.28.7"

# wgpu 17 does not reexport naga.
wgpu = { version = "0.17.1", features = [ "glsl", "naga" ] }
# It uses naga 13.
naga = "0.13.0"

# Buffer management.
nrbf-rs = { git = "https://github.com/alexd2580/nrbf-rs.git", branch = "master" }
bytemuck = "1.14.0"
image = "0.24.7"
rfd = "0.12.1"
glam = "0.24.2"
dirs = "5.0.1"
opencv = "0.93.3"
bitfield-struct = "0.9.2"
comfy-table = "7.2.2"
serde_json = "1"

[features]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_benchmarks"
harness = false
